--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>UmbraGreet - Discord Bot</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.png" type="image/png">
+    <!-- Open Graph Meta Tags for Embed -->
+    <meta property="og:title" content="UmbraGreet - Discord Bot">
+    <meta property="og:description" content="The best bot for managing user introductions and server moderation.">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:url" content="https://musthaq-muaadh.github.io/INTRO-BOT-DIS/">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
 
