--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <title>UmbraGreet - Discord Bot</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.png" type="image/png">
-    <!-- Open Graph Meta Tags for Embed -->
-    <meta property="og:title" content="UmbraGreet - Discord Bot">
-    <meta property="og:description" content="The best bot for managing user introductions and server moderation.">
-    <meta property="og:image" content="logo.png">
-    <meta property="og:url" content="https://musthaq-muaadh.github.io/INTRO-BOT-DIS/">
-    <meta name="twitter:card" content="summary_large_image">
+    <!-- HTML Meta Tags -->
+<title>UmbraGreet - Discord Bot</title>
+<meta name="description" content="The best bot for managing user introductions and server moderation.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://musthaq-muaadh.github.io/INTRO-BOT-DIS/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="UmbraGreet - Discord Bot">
+<meta property="og:description" content="The best bot for managing user introductions and server moderation.">
+<meta property="og:image" content="https://musthaq-muaadh.github.iologo.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="musthaq-muaadh.github.io">
+<meta property="twitter:url" content="https://musthaq-muaadh.github.io/INTRO-BOT-DIS/">
+<meta name="twitter:title" content="UmbraGreet - Discord Bot">
+<meta name="twitter:description" content="The best bot for managing user introductions and server moderation.">
+<meta name="twitter:image" content="https://musthaq-muaadh.github.iologo.png">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 </head>
 <body>
 
