--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="UmbraGreet - Discord Bot">
 <meta property="og:description" content="The best bot for managing user introductions and server moderation.">
-<meta property="og:image" content="https://musthaq-muaadh.github.iologo.png">
+<meta property="og:image" content="https://musthaq-muaadh.github.io/INTRO-BOT-DIS/logo.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
 <meta property="twitter:url" content="https://musthaq-muaadh.github.io/INTRO-BOT-DIS/">
 <meta name="twitter:title" content="UmbraGreet - Discord Bot">
 <meta name="twitter:description" content="The best bot for managing user introductions and server moderation.">
-<meta name="twitter:image" content="https://musthaq-muaadh.github.iologo.png">
+<meta name="twitter:image" content="https://musthaq-muaadh.github.io/INTRO-BOT-DIS/logo.png">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 </head>
