--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
 
         <section>
             <h2>📞 Contact Information</h2>
-            <p><strong>Email:</strong> <a href="mailto:support@softvionix.com">support@softvionix.com</a></p>
-            <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 234 567 890</a> (Currently unavailable)</p>
+            <p><strong>Email:</strong> <a href="muaadhmusthaq2007@gmail.com">muaadhmusthaq2007@gmail.com</a</p>
+            <p><strong>Phone:</strong></p>
             <p><strong>Discord Support:</strong> <a href="https://discord.gg/YOUR_INVITE_LINK" target="_blank">Join our Discord Server</a></p>
         </section>
 
