--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <div class="feature">
                 <h3>🔒 Command Restrictions</h3>
                 <p>Admins can allow/disallow commands in specific channels using `/allow` and `/disallow`.</p>
+                <p>By default the Bot is restricted in all channels</p>
             </div>
             <div class="feature">
                 <h3>⚡ Database Storage</h3>
